# CMaterial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  version.rc
.github/workflows/: label-to-project.yml  project-to-label.yml
include/glad/: gl.h
patch/: glfw-ime-fix.patch
src/: main.cpp
src/content/animation/material/: HoverAnimation.h  HoverAnimation.hpp  RippleAnimation.h  RippleAnimation.hpp
src/content/component/AnimationButton/: AnimationButton.cpp  AnimationButton.h  MultiLayerButton.cpp  MultiLayerButton.h
src/content/component/AnimationButton/layer/: BackgroundLayer.h
src/content/component/AnimationButton/layers/: BackgroundLayer.cpp  OverlayLayer.cpp  OverlayLayer.h
src/content/component/BasicButton/: BasicButton.cpp  BasicButton.h
src/content/component/BasicWindow/: BasicWindow.cpp
src/content/component/CreatorButton/: CreatorButton.h
src/content/component/MultiLayerButton/: MultiLayerButton.cpp  MultiLayerButton.h
src/content/component/MultiLayerButton/layer/: BackgroundLayer.cpp  BackgroundLayer.h  OverlayLayer.h
src/content/component/material/Button/: Button.cpp  Button.h
src/content/component/material/Button/layer/: BGLayer.h  BackgroundLayer.hpp  RippleLayer.cpp  RippleLayer.h
src/content/logic/event/: SpawnWindowRequest.hpp
src/content/logic/listener/: WindowLogic.h  WindowLogic.hpp
src/content/window/BasicWindow/: BasicWindow.cpp  BasicWindow.h
src/engine/animation/: Animation.cpp  Animation.h  IAnimation.cpp  IAnimation.h  Player.cpp  Player.h
src/engine/component/: IComponent.cpp  IComponent.h  ILayer.cpp  ILayer.h  ILayer.hpp
src/engine/eventbus/: EventBus.cpp  EventBus.h  IEvent.cpp  IEvent.h  IEvent.hpp  IListener.h
src/engine/eventbus/internal/event/: EmptyEvent.hpp  ForceRedrawEvent.hpp
src/engine/eventbus/internal/listener/: ForceRedrawListener.hpp
src/engine/framework/: Framework.cpp  Framework.h
src/engine/utils/: INode.h  INode.hpp  ordered_map.hpp
src/engine/window/: IWindow.cpp  IWindow.h
